--- a/TicketLinkMacro/TicketLinkMacro/TicketLinkMacro.csproj
+++ b/TicketLinkMacro/TicketLinkMacro/TicketLinkMacro.csproj
@@ -75,6 +75,10 @@
     <Compile Include="Models\Blocks.cs" />
     <Compile Include="Models\CommunicationResult.cs" />
     <Compile Include="Models\Grades.cs" />
+    <Compile Include="Models\Meta.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductInfo.cs" />
+    <Compile Include="Models\ProductRound.cs" />
     <Compile Include="Models\RemainSeatData.cs" />
     <Compile Include="Utils\BindableBase.cs" />
     <Compile Include="Utils\CommandBase.cs" />
