Added Date, Time Settings, RemainSeatsID Print, Gradename, Blockname Print

--- a/TicketLinkMacro/TicketLinkMacro/TicketLinkMacro.csproj
+++ b/TicketLinkMacro/TicketLinkMacro/TicketLinkMacro.csproj
@@ -76,10 +76,12 @@
     <Compile Include="Models\CommunicationResult.cs" />
     <Compile Include="Models\Grades.cs" />
     <Compile Include="Models\Meta.cs" />
+    <Compile Include="Models\PreOccupancy.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductInfo.cs" />
     <Compile Include="Models\ProductRound.cs" />
     <Compile Include="Models\RemainSeatData.cs" />
+    <Compile Include="Models\SoldoutSeats.cs" />
     <Compile Include="Utils\BindableBase.cs" />
     <Compile Include="Utils\CommandBase.cs" />
     <Compile Include="Utils\Configs.cs" />
